<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">E-Pass</string>
    <string name="ContextoDados_onCreate">CREATE TABLE usuarios 
        (ID INTEGER PRIMARY KEY AUTOINCREMENT, Nome TEXT, saldo TEXT, cartao TEXT, senha TEXT, CPF TEXT, loguin TEXT);</string>
    <string name="ContextoDados_onUpgrade">"
		DROP TABLE IF EXISTS usuarios</string>
    <string name="contatos">E-Pass</string>
    <string name="lblNome">Usuario:</string>
    <string name="lblSenha">Senha:</string>
      <string name="lblCPF">CPF:</string>
    <string name="lblCartao">Nº Cartão:</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnLogar">Logar</string>
    <string name="btnHist">Historico</string>
    <string name="btnQR">Meu QR</string>
  <string name="menu">Menu</string>  
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logar">Logar</string>
    <string name="title_activity_qr">Meu Codigo</string>
    <string name="title_activity_saldo">Meu Historico</string>
    <string name="title_activity_menu">Menu Principal</string>

</resources>
