<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_x="173dp"
        android:layout_y="200dp"
        android:text="@string/btnSalvar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_x="78dp"
        android:layout_y="200dp"
        android:text="Cancelar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_x="20dp"
        android:layout_y="30dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblNome"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:text="@string/lblNome"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/lblCartao"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblCPF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/lblCPF"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblSenha"
                  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/lblSenha"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName" >

                <requestFocus android:layout_width="wrap_content" />

            </EditText>

            <EditText
                android:id="@+id/txtCartao"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtCPF"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

  

</AbsoluteLayout>